2006-06-01  Geoffrey Garen  <ggaren@apple.com>

        - Test for http://bugzilla.opendarwin.org/show_bug.cgi?id=9113
        REGRESSION (14581): XMLHttpRequest never calls onreadystatechange with 
        a readystate == 4

        * http/tests/xmlhttprequest/event-listener-gc.html: Added.
        * http/tests/xmlhttprequest/event-listener-gc-expected.txt: Added.

2006-06-01  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Darin.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=6309
        multiple problems prevent bookmarking/back button technique for AJAX/DHTML applications from working
        
        * fast/dom/location-hash-expected.txt: Added.
        * fast/dom/location-hash.html: Added.
        Added tests.
        
2006-06-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders.
        
        - fixed "REGRESSION: Can't order from Pizza Hut (ToT, 05/24/06)"
        http://bugzilla.opendarwin.org/show_bug.cgi?id=9103

        * http/tests/misc/redirect-expected.txt: Added.
        * http/tests/misc/redirect.php: Added.
        * http/tests/misc/resources/redirect-result.php: Added.

2006-06-01  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by harrison

        * editing/selection/focus-body-expected.checksum: Added.
        * editing/selection/focus-body-expected.png: Added.
        * editing/selection/focus-body-expected.txt: Added.
        * editing/selection/focus-body.html: Added.
        * editing/selection/focus_editable_html-expected.checksum:
        * editing/selection/focus_editable_html-expected.png:
        * editing/selection/focus_editable_html-expected.txt:

2006-06-01  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Darin.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=8996
        slow-utf8-text layout test case failing (no longer deterministic?)

        * http/tests/incremental/slow-utf8-text-expected.txt:
        Updated
